<resources>
    <string name="app_name">IT Surfer</string>
    <string name="btmMenu_home">home</string>
    <string name="btmMenu_person_page">my page</string>
    <string name="btmMenu_settings">settings</string>
    <string name="loadErrorText">Ошибка загрузки.\nПопробовать снова</string>
    <string name="loadErrorButton">Загрузить</string>
    <string name="toastAddFavoritePlayList">Плейлист добавлен в избранное</string>
    <string name="toastAddFavoriteVideo">Видео добавлено в избранное</string>
    <string name="toastRemoveFromFavorite">Удалено из избранного</string>
    <string name="toastRemoveFromFavoriteFail">Не удалось удалить из избранного</string>
    <string name="toastAddFavoriteFail">Не удалось добавить в избранное</string>
    <string name="messageStrangeLoadException">Ошибка соединения, попробуйте позже</string>
    <string name="messageRoomLoadException">Повреждены файлы приложения, требуется переустановка</string>
    <string name="messageNetworkLoadException">Не удалось подключиться к серверу</string>
    <string name="toastAllVideoLoad">Загружены все видео</string>
    <string name="toastPlayListNotPublic">К сожалению, плейлист недоступен для показа</string>
    <string name="btnOpenPageChannel">На канал</string>
    <string name="btnFindMoreChannels">Найти похожие видео</string>
    <string name="btnFindMoreVideoTheme">Другие видео по теме</string>
    <string name="btnLoadMore">Открыть все видео</string>
    <string name="btnGoToChannel">перейти</string>
    <string name="btnOpen">Открыть</string>
    <string name="imgBtnAddtoFavorite">Добавить в любимые</string>
    <string name="imgPreviewVideo">Превью видео</string>
    <string name="DescrAddToFavorite">Добавить в любимые</string>
    <string name="DescrOpenPayList">Открыть плейлист</string>
    <string name="DescrRemoveFromFavorite">Удалить из избранного</string>
    <string name="btnActionPlayList">плейлист</string>
    <string name="btnActionVideo">видео</string>
    <string name="messageStrangeException">Непредвиденная ошибка, попробуйте позже</string>
    <string name="iconNameTabPlayList">Плейлисты</string>
    <string name="iconNameTabVideo">Видео</string>
    <string name="messageErrorDataBaseSave">Не удалось добавить в избранное</string>
    <string name="DscrBackgroundIconOnImage">backgroundPlay</string>
    <string name="DscrEmptyList">Пока ничего нет для показа</string>
    <string name="DscrIconPlayVideo">IconPlayVideo</string>
    <string name="mainAppTitle">IT Surfer</string>
    <string name="searchAppTitle">Все результаты поиска</string>
    <string name="UserAppTitle">Избранное</string>
    <string name="descrMenuBottomHome">Главная страница</string>
    <string name="descrMenuBottomUser">Страница пользователя</string>


</resources>