<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />

    <TextView
        android:id="@+id/titleVideo"
        style="?attr/TA_TextViewTitleHeadBig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Заголовок" />

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/shape_rect_round"
        android:contentDescription="@string/imgPreviewVideo"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/titleVideo" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="actionNegativeButton" />

    <TextView
        android:id="@+id/titleChannel"
        style="?attr/TA_TextViewTitleHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="2"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="Название канала" />

    <TextView
        android:id="@+id/description"
        style="?attr/TA_TextViewBodyInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="2"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/titleChannel"
        tools:text="Описание" />

    <TextView
        android:id="@+id/publishedAt"
        style="?attr/TA_TextViewBodyInfo"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/imageVideo"
        tools:text="Дата: " />
    <ImageView
        android:id="@+id/backgroundIconGo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_image_on_video"
        app:layout_constraintBottom_toBottomOf="@id/imageVideo"
        app:layout_constraintEnd_toEndOf="@id/imageVideo"
        app:layout_constraintStart_toStartOf="@id/imageVideo"
        app:layout_constraintTop_toTopOf="@id/imageVideo"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHorizontal_bias="1"
        android:contentDescription="@string/DscrBackgroundIconOnImage" />
    <ImageView
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/DscrIconPlayVideo"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBottom_toBottomOf="@id/backgroundIconGo"
        app:layout_constraintEnd_toEndOf="@id/backgroundIconGo"
        app:layout_constraintTop_toTopOf="@id/backgroundIconGo"
        app:layout_constraintStart_toStartOf="@id/backgroundIconGo"/>

    <Button
        android:id="@+id/actionNegativeButton"
        style="?attr/BS_Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnActionVideo"
        app:icon="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="@id/imageVideo"
        app:layout_constraintTop_toBottomOf="@id/imageVideo" />

</androidx.constraintlayout.widget.ConstraintLayout>