<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    tools:background="?attr/CLR_white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="4dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="4dp" />

    <TextView
        android:id="@+id/titleChannel"
        style="?attr/TA_TextViewTitleHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintBottom_toTopOf="@id/imageVideo"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Название канала" />

    <TextView
        android:id="@+id/titleVideo"
        style="?attr/TA_TextViewTitleLittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/imageVideo"
        tools:text="Заголовок" />

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:paddingVertical="5dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/titleVideo"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/titleChannel"
        app:layout_constraintVertical_bias="0"
        tools:background="@drawable/shape_rect_round" />

    <ImageButton
        android:id="@+id/btnOpenThisPL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/DescrOpenPayList"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_open_in_new"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintEnd_toEndOf="@id/imageVideo"
        app:layout_constraintStart_toStartOf="@id/imageVideo"
        app:layout_constraintBottom_toBottomOf="@id/imageVideo"
        app:layout_constraintTop_toTopOf="@id/imageVideo" />

    <Button
        android:id="@+id/btnPositiveActionPlaylist"
        style="?attr/BS_OutlineMinimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="3dp"
        android:contentDescription="@string/DescrAddToFavorite"
        android:text="@string/btnActionPlayList"
        android:visibility="visible"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleVideo" />


</androidx.constraintlayout.widget.ConstraintLayout>
